[gd_scene load_steps=22 format=3 uid="uid://c2po4yygqv25f"]

[ext_resource type="Script" path="res://Assets/Scene/UI/Main_Menu.gd" id="1_0kdyt"]
[ext_resource type="Texture2D" uid="uid://b0gx35n3pyr1i" path="res://Assets/Textures/Sprite-0006_LootLocker-Sheet.png" id="2_cw1xd"]
[ext_resource type="Texture2D" uid="uid://c4hulwdi3djki" path="res://banner.png" id="3_d3pxi"]
[ext_resource type="Texture2D" uid="uid://p6rt41s08b7g" path="res://Assets/Textures/UI/Sprite-0015_UI_knob.png" id="4_uq5w3"]
[ext_resource type="Texture2D" uid="uid://c1x0dbwb20jea" path="res://Assets/Textures/target.png" id="5_h5faj"]
[ext_resource type="Script" path="res://Assets/Scene/UI/highscore/highscore_menu.gd" id="6_mv5we"]
[ext_resource type="PackedScene" uid="uid://b7yh6fykenerv" path="res://Assets/Scene/UI/highscore/highscore_entry.tscn" id="7_g7t55"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jnhba"]
atlas = ExtResource("2_cw1xd")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk2dw"]
atlas = ExtResource("2_cw1xd")
region = Rect2(1024, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_reo82"]
atlas = ExtResource("2_cw1xd")
region = Rect2(2048, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8tc4"]
atlas = ExtResource("2_cw1xd")
region = Rect2(3072, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_hodc5"]
atlas = ExtResource("2_cw1xd")
region = Rect2(4096, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdix8"]
atlas = ExtResource("2_cw1xd")
region = Rect2(5120, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd2e5"]
atlas = ExtResource("2_cw1xd")
region = Rect2(6144, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_kntvs"]
atlas = ExtResource("2_cw1xd")
region = Rect2(7168, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_os0t3"]
atlas = ExtResource("2_cw1xd")
region = Rect2(8192, 0, 1024, 1024)

[sub_resource type="SpriteFrames" id="SpriteFrames_txge5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnhba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk2dw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_reo82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8tc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hodc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdix8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd2e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kntvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_os0t3")
}],
"loop": false,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wtfd7"]
bg_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cja07"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_442mh"]
bg_color = Color(0.668416, 0.992682, 0.872438, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n7fyp"]
bg_color = Color(0.324376, 0.202315, 0.255942, 1)

[node name="Main_Menu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_0kdyt")

[node name="firstSplash" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="firstSplash"]
layout_mode = 2
color = Color(0.247059, 0.14902, 0.192157, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="firstSplash"]
position = Vector2(710, 370)
sprite_frames = SubResource("SpriteFrames_txge5")
autoplay = "default"
frame = 8
frame_progress = 1.0

[node name="Label" type="Label" parent="firstSplash"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "

Database System"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Menu" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Menu"]
layout_mode = 2
texture = ExtResource("3_d3pxi")
expand_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 0

[node name="ColorRect" type="ColorRect" parent="Menu/PanelContainer"]
layout_mode = 2
color = Color(0.247059, 0.14902, 0.192157, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Million Ravens"
horizontal_alignment = 1

[node name="Button_Start" type="Button" parent="Menu/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="Button_Settings" type="Button" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="Button_Credit" type="Button" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
disabled = true
text = "Credits"

[node name="Button_Highscore" type="Button" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Highscore"

[node name="Quit_Button" type="Button" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="HSeparator" type="HSeparator" parent="Menu/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label2" type="Label" parent="Menu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "version 1.01"
horizontal_alignment = 1
vertical_alignment = 2

[node name="PanelContainer2" type="PanelContainer" parent="Menu"]
visible = false
layout_mode = 2
size_flags_horizontal = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PanelContainer2"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="Label3" type="Label" parent="Menu/PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "-No Sound

Controls: 
-W,A,S,D to move
-Left Mouse Button to attack

Win Condition:
Survive 10 Minutes or 
Defeat the Ravenlord

Lose Conditition:
 less than 0 Highscore


"

[node name="Setting_Menu" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 329.0
offset_top = 54.0
offset_right = 1129.0
offset_bottom = 554.0

[node name="Setting_VBox" type="VBoxContainer" parent="Setting_Menu"]
layout_mode = 2

[node name="Master_Volume_Slider_Panel" type="Panel" parent="Setting_Menu/Setting_VBox"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wtfd7")

[node name="Label" type="Label" parent="Setting_Menu/Setting_VBox/Master_Volume_Slider_Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -11.5
offset_right = 59.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.262745, 0.882353, 0.701961, 1)
theme_override_colors/font_shadow_color = Color(0.324376, 0.202315, 0.255942, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 25
text = "Master Volume"

[node name="Master_Volume_Slider" type="HSlider" parent="Setting_Menu/Setting_VBox/Master_Volume_Slider_Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = 18.0
offset_right = 167.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("4_uq5w3")
theme_override_icons/grabber_highlight = ExtResource("5_h5faj")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_cja07")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_442mh")
max_value = 1.0
step = 0.01
value = 0.4

[node name="Music_Volume_Slider_Panel2" type="Panel" parent="Setting_Menu/Setting_VBox"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wtfd7")

[node name="Label" type="Label" parent="Setting_Menu/Setting_VBox/Music_Volume_Slider_Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -11.5
offset_right = 59.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.262745, 0.882353, 0.701961, 1)
theme_override_colors/font_shadow_color = Color(0.324376, 0.202315, 0.255942, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 25
text = "Music Volume"

[node name="Master_Volume_Slider" type="HSlider" parent="Setting_Menu/Setting_VBox/Music_Volume_Slider_Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = 18.0
offset_right = 167.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("4_uq5w3")
theme_override_icons/grabber_highlight = ExtResource("5_h5faj")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_cja07")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_442mh")
max_value = 1.0
step = 0.01
value = 0.4

[node name="Sound_Volume_Slider_Panel3" type="Panel" parent="Setting_Menu/Setting_VBox"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wtfd7")

[node name="Label" type="Label" parent="Setting_Menu/Setting_VBox/Sound_Volume_Slider_Panel3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -11.5
offset_right = 59.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.262745, 0.882353, 0.701961, 1)
theme_override_colors/font_shadow_color = Color(0.324376, 0.202315, 0.255942, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 25
text = "Sound Volume"

[node name="Master_Volume_Slider" type="HSlider" parent="Setting_Menu/Setting_VBox/Sound_Volume_Slider_Panel3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = 18.0
offset_right = 167.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("4_uq5w3")
theme_override_icons/grabber_highlight = ExtResource("5_h5faj")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_cja07")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_442mh")
max_value = 1.0
step = 0.01
value = 0.4

[node name="Player_name_change_Panel" type="Panel" parent="Setting_Menu/Setting_VBox"]
custom_minimum_size = Vector2(500, 130)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wtfd7")

[node name="Label" type="Label" parent="Setting_Menu/Setting_VBox/Player_name_change_Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.259
anchor_right = 0.5
anchor_bottom = 0.259
offset_left = -129.0
offset_top = -10.67
offset_right = 138.0
offset_bottom = 24.33
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.262745, 0.882353, 0.701961, 1)
theme_override_colors/font_shadow_color = Color(0.324376, 0.202315, 0.255942, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 25
text = "Change Player Name :"

[node name="LineEdit" type="LineEdit" parent="Setting_Menu/Setting_VBox/Player_name_change_Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = 8.0
offset_right = 162.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "enter here your name"
max_length = 40

[node name="Button" type="Button" parent="Setting_Menu/Setting_VBox/Player_name_change_Panel"]
layout_mode = 0
offset_left = 593.0
offset_top = 73.0
offset_right = 713.0
offset_bottom = 104.0
text = "Submit"

[node name="Highscore_Menu" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource("6_mv5we")
highscore_entry = ExtResource("7_g7t55")

[node name="TextureRect" type="TextureRect" parent="Highscore_Menu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -994.0
offset_top = -371.0
offset_right = 294.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.66, 1.66)
texture = ExtResource("3_d3pxi")

[node name="Highscore_panel" type="MarginContainer" parent="Highscore_Menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Highscore_Menu/Highscore_panel"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="Highscore_Menu/Highscore_panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.262745, 0.882353, 0.701961, 1)
theme_override_colors/font_shadow_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 11
theme_override_font_sizes/font_size = 50
text = "Highscore Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeaderScoreboard" parent="Highscore_Menu/Highscore_panel/VBoxContainer" instance=ExtResource("7_g7t55")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Highscore_Menu/Highscore_panel/VBoxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Highscore_Menu"]

[node name="Button" type="Button" parent="Highscore_Menu/Panel"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0.262745, 0.882353, 0.701961, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 34
theme_override_styles/normal = SubResource("StyleBoxFlat_n7fyp")
text = "<- Main Menu"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/Button_Start" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/Button_Settings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/Button_Highscore" to="." method="_on_button_highscore_pressed"]
[connection signal="pressed" from="Menu/PanelContainer/VBoxContainer/Quit_Button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Setting_Menu/Setting_VBox/Player_name_change_Panel/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Highscore_Menu/Panel/Button" to="." method="_on_highscore_back_button_pressed"]
